--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postgres",
+  "name": "xdotcom",
   "version": "1.0.0",
   "main": "dist/index.js",
   "type": "module",
@@ -23,6 +23,7 @@
     "@types/node": "^22.7.4",
     "concurrently": "^9.0.1",
     "nodemon": "^3.1.7",
+    "prisma": "^5.21.1",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
