--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "@typegoose/typegoose": "^12.8.0",
     "@types/pg": "^8.11.10",
     "bcrypt": "^5.1.1",
